Layout bugfix

--- a/assets/styles/partials/about.sass
+++ b/assets/styles/partials/about.sass
@@ -1,24 +1,11 @@
 .about
   &__wrap
-    display: flex
-    justify-content: space-between
-    align-items: flex-start
     width: 1130px
-    gap: 32px
     font: normal normal normal 16px/28px Inter
     position: relative
-    padding-bottom: 88px
-    flex-wrap: wrap
+    color: #414141
     @media screen and (max-width: 1659px)
       width: 100%
-      padding-bottom: 60px
-    @media screen and (max-width: 1279px)
-      justify-content: flex-start
-      flex-direction: column
-  &__block
-    width: 766px
-    font: normal normal normal 16px/28px Inter
-    color: #414141
   &__aside
     width: 200px
     margin-left: auto
