--- a/assets/styles/partials/output.sass
+++ b/assets/styles/partials/output.sass
@@ -70,7 +70,6 @@
       font-size: 20px
       line-height: 24px
       position: relative
-      white-space: nowrap
       &:before
         content: ""
         position: absolute
