--- a/assets/styles/partials/portfolio.sass
+++ b/assets/styles/partials/portfolio.sass
@@ -65,7 +65,6 @@
       font-size: 20px
       line-height: 24px
       position: relative
-      white-space: nowrap
       &:before
         content: ""
         position: absolute
@@ -94,14 +93,26 @@
         width: 100%
         max-width: 667px
   &__item
+    @media screen and (min-width: 1660px)
+      width: 367px
+    @media screen and (min-width: 1366px) and (max-width: 1659px)
+      width: 292px
+    @media screen and (min-width: 1280px) and (max-width: 1365px)
+      width: 271px
     &:hover
       .portfolio__gallery-title:before
         width: 100px
       img
         transform: scale(1.2)
     &_big
-      .portfolio__gallery-img
+      @media screen and (min-width: 1660px)
         width: 667px
+      @media screen and (min-width: 1366px) and (max-width: 1659px)
+        width: 508px
+      @media screen and (min-width: 1280px) and (max-width: 1365px)
+        width: 473px
+      .portfolio__gallery-img
+        width: 100%
         @media screen and (max-width: 1279px)
           width: 100%
           max-width: 667px
